title image update

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="web agency, web design, logo design, atlanta agency, mike" src="img/title.png" />
+				
+				<p>I create websites and design graphic that help<br>Atlanta companies become attrative and recognizable online</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
