--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				
-				<p>I create websites and design graphic that help<br>Atlanta companies become attrative and recognizable online</p>
+				<h1>I create websites and design graphic that help<br>Atlanta companies become attrative and recognizable online</h1>
+				
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
